examples/should-fail/f42_impred_predicative_leak_predicate.lean
def demo4_bad_predicative_leak_predicate : Type :=
  (P : Type -> Prop) -> Prop
